todo-project/todo-app/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todo-project-dep-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-project-front-dep-svc
            port:
              number: 2346
